@@ -1,2 +1,2 @@
-#define VERSION "6.01.01"
+#define VERSION "6.01.02"
 #define YEARS   "2005-2018"
