@@ -1,6 +1,9 @@
 #include "parser.ih"
 
-void Parser::blkDirect(string const &ruleType, Production const &prod)
+// unused ruleType is required when initializing s_defaultAction in data.cc
+
+void Parser::blkDirect([[maybe_unused]] string const &ruleType, 
+                       Production const &prod)
 {
     installDefaultAction(prod, svsElement(prod.size(), 1) );
 }
