@@ -1,6 +1,9 @@
 #include "parser.ih"
 
-void Parser::blkNopW(string const &ruleType, Production const &prod)
+// unused ruleType is required when initializing s_defaultAction in data.cc
+
+void Parser::blkNopW([[maybe_unused]] string const &ruleType, 
+                     Production const &prod)
 {
     wmsg << '`' << &prod << 
             "': no default action block was installed" << endl;
