@@ -1,6 +1,9 @@
 #include "parser.ih"
 
-bool Parser::loc(int nElements, Block &block,AtDollar const &atd)
+// unused `nElements' is required when initializing s_union in data.cc
+
+bool Parser::loc([[maybe_unused]] int nElements, 
+                 Block &block, AtDollar const &atd)
 {
     block.replace(atd.pos(), atd.length(), s_locationValue);
     warnForceLSP(atd.lineNr());
