@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V6.00.00 on Thu, 18 May 2017 09:02:19 +0200
+// Generated by Bisonc++ V6.01.01 on Thu, 08 Mar 2018 19:47:12 +0100
 
 // base/comment
 
@@ -1370,7 +1370,6 @@ SR__ s_153[] =
     { {      268}, { -10} }, // FLEX                         
     { {      270}, { -10} }, // IMPLEMENTATION_HEADER        
     { {      271}, { -10} }, // LEFT                         
-    { {      292}, { -10} }, // START                        
     { {      272}, { -10} }, // LOCATIONSTRUCT               
     { {      273}, { -10} }, // LSP_NEEDED                   
     { {      274}, { -10} }, // LTYPE                        
@@ -1388,6 +1387,7 @@ SR__ s_153[] =
     { {      289}, { -10} }, // SCANNER_MATCHED_TEXT_FUNCTION
     { {      290}, { -10} }, // SCANNER_TOKEN_FUNCTION       
     { {      291}, { -10} }, // STACK_EXPANSION              
+    { {      292}, { -10} }, // START                        
     { {      294}, { -10} }, // STYPE                        
     { {      295}, { -10} }, // TARGET_DIRECTORY             
     { {      296}, { -10} }, // TOKEN                        
