@@ -1,4 +1,4 @@
-// Generated by Flexc++ V2.05.00 on Thu, 18 May 2017 09:02:20 +0200
+// Generated by Flexc++ V2.06.03 on Thu, 08 Mar 2018 19:47:17 +0100
 
 #include <iostream>
 #include <fstream>
@@ -28,8 +28,9 @@ size_t const ScannerBase::s_ranges__[] =
     67,67,67,67,67,67,
 };
 
+// $insert startcondinfo
     // s_dfa__ contains the rows of *all* DFAs ordered by start state.  The
-    // enum class StartCondition__ is defined in the baseclass header
+    // enum class StartCondition__is defined in the baseclass header.
     // StartCondition__::INITIAL is always 0.  Each entry defines the row to
     // transit to if the column's character range was sensed. Row numbers are
     // relative to the used DFA, and d_dfaBase__ is set to the first row of
@@ -2250,7 +2251,7 @@ size_t ScannerBase::Input::get()
     {
         case '\n':
             ++d_lineNr;
-        // FALLING THROUGH
+        [[fallthrough]]
 
         default:
             if (s_debug__)
@@ -2592,17 +2593,17 @@ void ScannerBase::updateFinals__()
 
     if (rf[0] != -1)        // update to the latest std rule
     {
-    // $insert debug
-    if (s_debug__)
-        s_out__ <<  "latest std rule: " << rf[0] << ", len = " << len << "\n" << dflush__;
+        // $insert debug
+        if (s_debug__)
+            s_out__ <<  "latest std rule: " << rf[0] << ", len = " << len << "\n" << dflush__;
         d_final.std = FinalData { as<size_t>(rf[0]), len };
     }
 
     if (rf[1] != -1)        // update to the latest bol rule
     {
-    // $insert debug
-    if (s_debug__)
-        s_out__ <<  "latest BOL rule: " << rf[0] << ", len = " << len << "\n" << dflush__;
+        // $insert debug
+        if (s_debug__)
+            s_out__ <<  "latest BOL rule: " << rf[0] << ", len = " << len << "\n" << dflush__;
         d_final.bol = FinalData { as<size_t>(rf[1]), len };
     }
 }
