@@ -21,8 +21,7 @@
 using namespace std;
 using namespace FBB;
 
-inline void State::addDependents(Next const &next, Symbol const *symbol, 
-                                 size_t idx)
+inline void State::addDependents(Symbol const *symbol, size_t idx)
 {
     d_itemVector[idx].setNext(Next::addToKernel(d_nextVector, symbol, idx));
 }
